--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -6,9 +6,9 @@
     <%- include('includes/navigation.ejs') %>
 
     <main>
-        <% if (products.length > 0){ %>
+        <% if (prods.length > 0) { %>
             <div class="grid">
-                <% for (let product of products) { %>
+                <% for (let product of prods) { %>
                     <article class="card product-item">
                         <header class="card__header">
                             <h1 class="product__title"><%= product.title %></h1>
@@ -27,7 +27,7 @@
                 <% } %>
             </div>
         <% } else { %>
-            <h1>No Products available</h1>
+            <h1>No Products Found!</h1>
         <% } %>
     </main>
 <%- include('includes/end.ejs') %>
