--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -3,4 +3,23 @@
 
     <body>
         <%- include('../includes/navigation.ejs') %>
+        <main>
+            <% if (products.length > 0) {%>
+                <ul>
+                    <% products.forEach(product => { %>
+                        <li>
+                            <%= product.productData.title %> <br>
+                            <%= product.qty %> <br>
+                            <form action="/cart-delete-item" method="post">
+                                <input type="hidden" name="prodID" value="<%= product.productData.id %>">
+                                <button type="submit" class="btn">DELETE</button>
+                            </form>
+                        </li>
+                    <% }) %>
+                </ul>
+            <% } else { %>
+                <h1>Your cart is empty!!!</h1>
+            <% } %>
+
+        </main>
         <%- include('../includes/end.ejs') %>
