--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -4,22 +4,20 @@
     <body>
         <%- include('../includes/navigation.ejs') %>
         <main>
-            <% if (products.length > 0) {%>
+            <% if (products.length > 0) { %>
                 <ul>
-                    <% products.forEach(product => { %>
+                    <% products.forEach(p => { %>
                         <li>
-                            <%= product.productData.title %> <br>
-                            <%= product.qty %> <br>
-                            <form action="/cart-delete-item" method="post">
-                                <input type="hidden" name="prodID" value="<%= product.productData.id %>">
-                                <button type="submit" class="btn">DELETE</button>
+                            <p><%= p.productData.title %> (<%= p.qty %>)</p>
+                            <form action="/cart-delete-item" method="POST">
+                                <input type="hidden" value="<%= p.productData.id %>" name="productId">
+                                <button class="btn" type="submit">Delete</button>
                             </form>
                         </li>
                     <% }) %>
                 </ul>
             <% } else { %>
-                <h1>Your cart is empty!!!</h1>
+                <h1>No Products in Cart!</h1>
             <% } %>
-
         </main>
         <%- include('../includes/end.ejs') %>
